# python_layered_architected_crawler

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  main.py  output.jsonl  pyproject.toml
.github/workflows/: test.yml
crawler/components/: logger.py
crawler/domain/: __init__.py  web_page.py
crawler/repositories/: json_repository.py
crawler/requester/: web_page_requester.py
crawler/requester/parser/: wab_page_parser.py
crawler/usecases/: collect_links.py
docker/app/: Dockerfile
tests/repositories/: test_json_repository.py
tests/requester/: test_web_page_requester.py
tests/requester/parser/: test_wab_page_parser.py
tests/requester/parser/fixture/test_wab_page_parser/: test_parse.html
tests/usecases/: test_collect_links.py
