[tool.poetry]
name = "python_layered_architected_crawler"
version = "0.1.0"
description = ""
authors = ["Chanmoro <kazuki.m777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pytest = "^6.2.2"
mypy = "^0.812"
types-requests = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
